// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/vite:init dependencies for package.json should add vite packages and react-related dependencies for vite 1`] = `
{
  "dependencies": {
    "existing": "1.0.0",
  },
  "devDependencies": {
    "@nx/js": "0.0.1",
    "@nx/vite": "0.0.1",
    "@vitejs/plugin-react": "~4.0.1",
    "@vitest/ui": "~0.32.0",
    "existing": "1.0.0",
    "prettier": "^2.6.2",
    "typescript": "~5.1.3",
    "vite": "~4.4.9",
    "vitest": "~0.34.4",
  },
  "name": "test-name",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=edge-runtime 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@edge-runtime/vm": "~3.0.2",
    "@nx/js": "0.0.1",
    "@nx/vite": "0.0.1",
    "@vitest/ui": "~0.32.0",
    "prettier": "^2.6.2",
    "typescript": "~5.1.3",
    "vite": "~4.4.9",
    "vitest": "~0.34.4",
  },
  "name": "test-name",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=happy-dom 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@nx/js": "0.0.1",
    "@nx/vite": "0.0.1",
    "@vitest/ui": "~0.32.0",
    "happy-dom": "~12.0.1",
    "prettier": "^2.6.2",
    "typescript": "~5.1.3",
    "vite": "~4.4.9",
    "vitest": "~0.34.4",
  },
  "name": "test-name",
}
`;

exports[`@nx/vite:init dependencies for package.json should support --testEnvironment=jsdom 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@nx/js": "0.0.1",
    "@nx/vite": "0.0.1",
    "@vitest/ui": "~0.32.0",
    "jsdom": "~22.1.0",
    "prettier": "^2.6.2",
    "typescript": "~5.1.3",
    "vite": "~4.4.9",
    "vitest": "~0.34.4",
  },
  "name": "test-name",
}
`;
